--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,7 +58,6 @@
   "Themify Icon": "Themify Icon",
   "Feather Icon": "Feather Icon",
   "Whether Icon": "Whether Icon",
-  "Buttons": "Buttons",
   "Default Style": "Default Style",
   "Flat Style": "Flat Style",
   "Edge Style": "Edge Style",
@@ -80,7 +79,6 @@
   "Border Table": "Border Table",
   "Styling Table": "Styling Table",
   "Ngx-Datatables": "Ngx-Datatables",
-  "Basic Table": "Basic Table",
   "Editing Table": "Editing Table",
   "Filter Table": "Filter Table",
   "Fullscreen Table": "Fullscreen Table",
@@ -166,7 +164,7 @@
   "Company": "Company",
   "ViewAll": "View all companies as",
   "Company Name": "Company Name",
-  "errMsg": "This field is required",
+  "requiredMsg": "This field is required",
   "websiteUrlError": "You must enter a valid url start with http:// or https://",
   "phoneValidation": "This field is must be in a valid format min (7) max (15) digit !!",
   "emailValidation": "This field must be a valid email (example@domain.com)",
